--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <body>
       <h1>Pros and Cons of Social media</h1>
       <div>
-        <p>Introduction to your topic. Explain briefly what you will discuss.</p>
+        <p>Today, I will discuss the pros and cons of Social media, which will go over the good and bad parts of it.</p>
       </div>
       <table>
         <tr>
-          <th>Pros</th>
+          <th>Information: Social media is the main source of real-time news that millions look at evey day to see what is happening either in their environment, town, city, state, and even country.</th>
+            <th>Curiosity: Social meda can answer any questions that people might speculate. It is a good thing to have social media because of how eficient it is at answering questions.</th>
+            <th>Entertainment: This is the main purpose of social media, from all the funny videos, to the challenges,and the fails. 80% of the time, the average teenager would be on a social media app like Instagram or Tik Tok scrolling on their phone for entertainment.</th>
           <th>Cons</th>
+            <th>Cons</th>
+            <th>Cons</th>
+            <th></th>
         </tr>
         <!-- You will add rows here later -->
       </table>
