--- a/index.html
+++ b/index.html
@@ -30,5 +30,17 @@
               <td>Mental health decline: Certain videos or topics can leave one's mind shattered. The brain is a fragile thing and there are some people on social media who can't handle everything that they see.</td>
           </tr>
         <!-- You will add rows here later -->
-      </table>
+      </table> 
+        <table> 
+        <tr> 
+            <th> Martin Dr. Luther King   </th> 
+            <th>  Pictures  </th>
+        </tr>
+       <tr>
+            <td> <img src = "martinlutherking" />   </td>
+            <td>Martin Luther King Jr. was a civil rights leader and Baptist minister who championed nonviolent resistance against racial segregation in the United States. He played a key role in historic events like the Montgomery Bus Boycott and the 1963 March on Washington, where he delivered his famous "I Have a Dream" speech. Awarded the Nobel Peace Prize in 1964, King was assassinated in 1968 but remains a symbol of justice and equality.</td>
+
+       </tr>
+        
+        </table>
     </body>
