--- a/forms.html
+++ b/forms.html
@@ -1,1 +1,35 @@
+<html>
+<head>
+  <title>My first form</title>
+</head>
+<body>
+  <a href="forms.html">Go to Forms Page</a>
+  <form>
+    <label for ="name">Favorite God of War game:</label></br>
+      <imput type="text"></br>
+    <label for ="message">Message:</label></imput></br>
+         <textarea id="message" name="message"></textaea></br>
+  </form>
+</body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+</html>
