--- a/forms.html
+++ b/forms.html
@@ -7,7 +7,7 @@
   <form>
     <label for ="name">Favorite God of War game:</label></br>
       <imput type="text"></br>
-    <label for ="message">Message:</label></imput></br>
+    <label for ="message">What makes it your favorite game of the franchise?</label></imput></br>
          <textarea id="message" name="message"></textaea></br>
   </form>
 </body>
