--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       <title>Pros and cons</title>
     </head>
     <body>
+        <a href="forms.html">Go to Forms Page</a>
       <h1>Pros and Cons of Social media</h1>
       <div>
         <p>Today, I will discuss the pros and cons of Social media, which will go over the good and bad parts of it.</p>
