--- a/forms.html
+++ b/forms.html
@@ -8,7 +8,7 @@
     <label for ="name">Favorite God of War game:</label></br>
       <imput type="text"> </br>
     <label for ="message">What makes it your favorite game of the franchise?</label></imput></br>
-         <textarea id="message" name="message"></textaea></br>
+         <textarea id="message" name="message"></textarea></br>
   </form>
 </body>
 
