--- a/forms.html
+++ b/forms.html
@@ -6,7 +6,7 @@
   
   <form>
     <label for ="name">Favorite God of War game:</label></br>
-      <imput type="text" id="name" name="name"></br>
+      <imput type="text"><br></br>
     <label for ="message">What makes it your favorite game of the franchise?</label></imput></br>
          <textarea id="message" name="message"></textarea></br>
   </form>
