--- a/forms.html
+++ b/forms.html
@@ -8,7 +8,8 @@
     <label for ="name">Favorite God of War game:</label></br>
       <input type="text"><br></br>
     <label for ="message">What makes it your favorite game of the franchise?</label></imput></br>
-         <textarea id="message" name="message"></textarea></br>
+         <textarea id="message" name="message"></textarea><br></br>
+    <label for ="message">Who was your favorite villan?</label>
   </form>
 </body>
 
