--- a/forms.html
+++ b/forms.html
@@ -9,8 +9,8 @@
       <input type="text"><br></br>
     <label for ="message">What makes it your favorite game of the franchise?</label></imput></br>
          <textarea id="message" name="message"></textarea><br></br>
-    <label for ="message">What is your favorite weapon?</label>
-    input type="radio" id="Blades of Chaos" name="Blades of chaos" value="red">
+    <label for ="message">What is your favorite weapon?</label><br></br>
+    <input type="radio" id="Blades of Chaos" name="Blades of chaos" value="red">
    <label for="red">Red</label><br>
    <input type="radio" id="blue" name="color" value="blue">
    <label for="blue">Blue</label><br>
