--- a/forms.html
+++ b/forms.html
@@ -11,9 +11,11 @@
          <textarea id="message" name="message"></textarea><br></br>
     <label for ="message">What is your favorite weapon?</label><br></br>
     <input type="radio" id="Blades of Chaos" name="Blades of chaos" value="red">
-   <label for="red">Red</label><br>
+   <label for="red">Blades of Chaos</label><br>
    <input type="radio" id="blue" name="color" value="blue">
-   <label for="blue">Blue</label><br>
+   <label for="blue">Leviathan Axe</label><br>
+    <input type="radio" id="Drauphnir spear" name="Drauphnir Spear" value="green">
+      <label for ="blue"Drauphnir Spear"</label>
 
     
   </form>
