--- a/forms.html
+++ b/forms.html
@@ -12,10 +12,10 @@
     <label for ="message">What is your favorite weapon?</label><br></br>
     <input type="radio" id="Blades of Chaos" name="Blades of chaos" value="red">
    <label for="red">Blades of Chaos</label><br>
-   <input type="radio" id="blue" name="color" value="blue">
-   <label for="blue">Leviathan Axe</label><br>
-    <input type="radio" id="Drauphnir spear" name="Drauphnir Spear" value="green">
-      <label for ="blue"Drauphnir Spear"</label>
+   <input type="radio" id="Leviathan axe" name="color" value="Leviathan axe">
+   <label for="Leviathan axe">Leviathan axe</label><br>
+    <input type="radio" id="Drauphnir Spear" name="Drauphnir Spear" value="Drauphnir Spear">
+      <label for ="Drauphnir Spear">Drauphnir Spear"</label>
 
     
   </form>
