--- a/forms.html
+++ b/forms.html
@@ -10,12 +10,12 @@
     <label for ="message">What makes it your favorite game of the franchise?</label></imput></br>
          <textarea id="message" name="message"></textarea><br></br>
     <label for ="message">What is your favorite weapon?</label><br></br>
-    <input type="radio" id="Blades of Chaos" name="Blades of chaos" value="red">
-   <label for="red">Blades of Chaos</label><br>
+    <input type="radio" id="Blades of Chaos" name="Blades of chaos" value="Blades of chaos">
+   <label for="Blades of chaos">Blades of Chaos</label><br>
    <input type="radio" id="Leviathan axe" name="color" value="Leviathan axe">
-   <label for="Leviathan axe">Leviathan axe</label><br>
+   <label for="Leviathan axe">Leviathan axe</label><br></br>
     <input type="radio" id="Drauphnir Spear" name="Drauphnir Spear" value="Drauphnir Spear">
-      <label for ="Drauphnir Spear">Drauphnir Spear"</label>
+      <label for ="Drauphnir Spear">Drauphnir Spear"</label><br></br>
 
     
   </form>
