--- a/forms.html
+++ b/forms.html
@@ -15,7 +15,10 @@
    <input type="radio" id="Leviathan axe" name="color" value="Leviathan axe">
    <label for="Leviathan axe">Leviathan axe</label><br></br>
     <input type="radio" id="Drauphnir Spear" name="Drauphnir Spear" value="Drauphnir Spear">
-      <label for ="Drauphnir Spear">Drauphnir Spear"</label><br></br>
+      <label for ="Drauphnir Spear">Drauphnir Spear</label><br></br>
+ <label for="I">
+       <input type="checkbox" id="subscribe" name="subscribe"> Subscribe to GOW News channel
+   </label>
 
     
   </form>
