--- a/forms.html
+++ b/forms.html
@@ -17,6 +17,7 @@
     <input type="radio" id="Drauphnir Spear" name="Drauphnir Spear" value="Drauphnir Spear">
       <label for ="Drauphnir Spear">Drauphnir Spear</label><br></br>
  
+    <label for="subscribe">
        <input type="checkbox" id="subscribe" name="subscribe"> Subscribe to GOW News channel
    </label>
 
