--- a/forms.html
+++ b/forms.html
@@ -20,7 +20,8 @@
     <label for="subscribe">
        <input type="checkbox" id="subscribe" name="subscribe"> Subscribe to GOW News channel
    </label>
-
+  <button type="submit">Submit</button>
+  </form>
     
   </form>
 </body>
