--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
                 <img src="teen bean.jpeg" alt="Teen bean" width="500" height="600" style="vertical-align:bottom">
                 <img src="internet money.jpeg" alt="tnternet money" width="500" height="600" style="vertical-align:bottom">
 
-
+<p>I a 6'5</p>
+<p>I have a cat and a dog</p>
+<p>I physically cannot snap</p>
+<p>My favorite hobby is trying out new food</p>
+<p>I love basketball</p>
     </body>
